--- a/solution_folder/submit_tier.jinja
+++ b/solution_folder/submit_tier.jinja
@@ -2,6 +2,8 @@
 
 {% set instanceCount = properties["instanceCount"] %}
 {% set zone = properties["zone"] %}
+{% set list = properties["zone"].split('-') %}
+{% set region = list[0] + "-" + list[1] %}
 {% set machineType = properties["machineType"] %}
 {% set networks = [] %}
 {% for network in properties["network"] %}
@@ -27,7 +29,7 @@ resources:
     type: vm_instance.py
     properties:
       instanceName: {{ env["deployment"] }}-submit-vm-{{ vmIndex }}
-      sourceImage: https://www.googleapis.com/compute/v1/projects/kbatch-public/global/images/condor-submit-centos7-v8-8-1
+      sourceImage: https://www.googleapis.com/compute/v1/projects/kbatch-public/global/images/condor-submit-test
       zone: {{ zone }}
       machineType: {{ machineType }}
       networks:
@@ -49,12 +51,15 @@ resources:
       bootDiskType: {{ bootDiskType }}
       bootDiskSizeGb: {{ bootDiskSizeGb }}
       serviceAccounts:
-        - email: default
+        - email: "default"
           scopes:
-            - 'https://www.googleapis.com/auth/cloud.useraccounts.readonly'
-            - 'https://www.googleapis.com/auth/devstorage.read_only'
-            - 'https://www.googleapis.com/auth/logging.write'
-            - 'https://www.googleapis.com/auth/monitoring.write'
+          - "https://www.googleapis.com/auth/logging.write"
+          - "https://www.googleapis.com/auth/compute"
+          - "https://www.googleapis.com/auth/servicecontrol"
+          - "https://www.googleapis.com/auth/service.management.readonly"
+          - "https://www.googleapis.com/auth/monitoring.write"
+          - "https://www.googleapis.com/auth/trace.append"
+          - "https://www.googleapis.com/auth/devstorage.read_only"
       metadata:
         items:
           - key: startup-script
@@ -63,6 +68,9 @@ resources:
               echo 'CONDOR_HOST = {{ env["deployment"] }}-master-vm-0' >> /etc/condor/config.d/condor_config.local
               echo 'CONDOR_ADMIN = {{ properties["admin"] }}' >> /etc/condor/config.d/condor_config.local
               condor_reconfig
+              if ! grep -q "autoscaler" /etc/crontab; then
+                  sudo echo '* * * * * root /usr/bin/python /usr/local/autoscaler/autoscaler.py --project_id {{ env["project"] }} --region {{ region }} --zone {{ zone }} --group_manager {{env["deployment"] }}-compute-igm --verbosity 1 >> /tmp/cron.log 2>&1' >> /etc/crontab
+              fi
           - key: google-logging-enable
             value: {{ enableStackdriverLogging }}
           - key: google-monitoring-enable
