--- a/solution_folder/compute_tier.jinja
+++ b/solution_folder/compute_tier.jinja
@@ -12,6 +12,7 @@
 {% set externalIPs = properties["externalIP"] %}
 {% set bootDiskType = properties["bootDiskType"] %}
 {% set bootDiskSizeGb = properties["bootDiskSizeGb"] %}
+{% set preemptible = properties["preemptible"] %}
 {% set hasExternalIP = externalIPs is defined and externalIPs[0] != "NONE" %}
 {# Software status only works if the VM has an external IP. #}
 {% set enableStatusWaiter = hasExternalIP %}
@@ -48,7 +49,7 @@ resources:
               - 'https://www.googleapis.com/auth/logging.write'
               - 'https://www.googleapis.com/auth/monitoring.write'
         scheduling:
-          preemptible: true
+          preemptible: {{preemptible}}
         metadata:
           items:
             - key: startup-script
