upload htcondor solution v2.0.0
This is the version with autoscaler

--- a/solution_folder/network_tier.jinja
+++ b/solution_folder/network_tier.jinja
@@ -14,6 +14,8 @@ resources:
     properties:
       network: {{ networks[0] }}
       sourceRanges: ["0.0.0.0/0"]
+      sourceTags:
+      - {{ env["deployment"] }}-deployment
       allowed:
         - IPProtocol: TCP
           ports: ["22"]
