--- a/solution_folder/compute_tier.jinja
+++ b/solution_folder/compute_tier.jinja
@@ -33,7 +33,7 @@ resources:
           boot: true
           autoDelete: true
           initializeParams:
-            sourceImage: https://www.googleapis.com/compute/v1/projects/kbatch-public/global/images/condor-compute-centos7-v8-8-1
+            sourceImage: https://www.googleapis.com/compute/v1/projects/kbatch-public/global/images/condor-compute-v2-0-0
         networkInterfaces:
         - network: {{ networks[0] }}
         {% if acceleratorCount > 0 %}
@@ -49,7 +49,8 @@ resources:
               - 'https://www.googleapis.com/auth/logging.write'
               - 'https://www.googleapis.com/auth/monitoring.write'
         scheduling:
-          preemptible: {{preemptible}}
+          preemptible: {{ preemptible }}
+          onHostMaintenance: TERMINATE
         metadata:
           items:
             - key: startup-script
@@ -57,6 +58,7 @@ resources:
                 #!/bin/bash
                 echo 'CONDOR_HOST = {{ env["deployment"] }}-master-vm-0' >> /etc/condor/config.d/condor_config.local
                 echo 'CONDOR_ADMIN = {{ properties["admin"] }}' >> /etc/condor/config.d/condor_config.local
+                echo 'use feature : GPUs' >> /etc/condor/config.d/condor_config.local
                 condor_reconfig
             - key: google-logging-enable
               value: {{ enableStackdriverLogging }}
@@ -71,4 +73,5 @@ resources:
     properties:
       baseInstanceName: {{ env["deployment"] }}-compute-vm
       instanceTemplate: $(ref.{{ env["deployment"] }}-compute-vm-tmpl.selfLink)
+      targetSize: 0
       zone: {{ properties["zone"] }}
